--- a/Assignment_2/2 - Deployment/login.html
+++ b/Assignment_2/2 - Deployment/login.html
@@ -25,6 +25,9 @@
       <hr />
     </div>
 
+    <div class="gap"></div>
+    <div class="gap"></div>
+
     <main class="container">
       <div class="FormCard">
         <form>
@@ -33,10 +36,14 @@
           <input class="FormInput" type="email" />
           <label>Password</label>
           <input class="FormInput" type="email" />
-          <button id="FormBTN">Log</button>
+          <button id="FormBTN">Login</button>
+          <p><a href="#">Forgot your password?</a></p>
+          <p>Don't have account? <a href="#">Sign up</a></p>
         </form>
       </div>
     </main>
+    <div class="gap"></div>
+    <div class="gap"></div>
 
     <div class="container">
       <hr />
