--- a/Assignment_2/2 - Deployment/products.html
+++ b/Assignment_2/2 - Deployment/products.html
@@ -35,7 +35,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -51,7 +51,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -67,7 +67,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -83,75 +83,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
-            <p>Stylish cafe chair</p>
-            <a>Rp 2.500.000</a>
-          </div>
-        </article>
-      </div>
-    </div>
-
-    <br />
-
-    <div class="container row">
-      <div class="card-list">
-        <article class="cardP">
-          <figure>
-            <img
-              class="cardIMG"
-              src="assets/eco-friendly-products-vector-20807673.jpg"
-            />
-          </figure>
-          <div class="card-header">
-            <a href="#">Syltherine</a>
-            <p>Stylish cafe chair</p>
-            <a>Rp 2.500.000</a>
-          </div>
-        </article>
-      </div>
-
-      <div class="card-list">
-        <article class="cardP">
-          <figure>
-            <img
-              class="cardIMG"
-              src="assets/eco-friendly-products-vector-20807673.jpg"
-            />
-          </figure>
-          <div class="card-header">
-            <a href="#">Syltherine</a>
-            <p>Stylish cafe chair</p>
-            <a>Rp 2.500.000</a>
-          </div>
-        </article>
-      </div>
-
-      <div class="card-list">
-        <article class="cardP">
-          <figure>
-            <img
-              class="cardIMG"
-              src="assets/eco-friendly-products-vector-20807673.jpg"
-            />
-          </figure>
-          <div class="card-header">
-            <a href="#">Syltherine</a>
-            <p>Stylish cafe chair</p>
-            <a>Rp 2.500.000</a>
-          </div>
-        </article>
-      </div>
-
-      <div class="card-list">
-        <article class="cardP">
-          <figure>
-            <img
-              class="cardIMG"
-              src="assets/eco-friendly-products-vector-20807673.jpg"
-            />
-          </figure>
-          <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -171,7 +103,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -187,7 +119,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -203,7 +135,7 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
@@ -219,7 +151,75 @@
             />
           </figure>
           <div class="card-header">
-            <a href="#">Syltherine</a>
+            <a href="details.html">Syltherine</a>
+            <p>Stylish cafe chair</p>
+            <a>Rp 2.500.000</a>
+          </div>
+        </article>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="container row">
+      <div class="card-list">
+        <article class="cardP">
+          <figure>
+            <img
+              class="cardIMG"
+              src="assets/eco-friendly-products-vector-20807673.jpg"
+            />
+          </figure>
+          <div class="card-header">
+            <a href="details.html">Syltherine</a>
+            <p>Stylish cafe chair</p>
+            <a>Rp 2.500.000</a>
+          </div>
+        </article>
+      </div>
+
+      <div class="card-list">
+        <article class="cardP">
+          <figure>
+            <img
+              class="cardIMG"
+              src="assets/eco-friendly-products-vector-20807673.jpg"
+            />
+          </figure>
+          <div class="card-header">
+            <a href="details.html">Syltherine</a>
+            <p>Stylish cafe chair</p>
+            <a>Rp 2.500.000</a>
+          </div>
+        </article>
+      </div>
+
+      <div class="card-list">
+        <article class="cardP">
+          <figure>
+            <img
+              class="cardIMG"
+              src="assets/eco-friendly-products-vector-20807673.jpg"
+            />
+          </figure>
+          <div class="card-header">
+            <a href="details.html">Syltherine</a>
+            <p>Stylish cafe chair</p>
+            <a>Rp 2.500.000</a>
+          </div>
+        </article>
+      </div>
+
+      <div class="card-list">
+        <article class="cardP">
+          <figure>
+            <img
+              class="cardIMG"
+              src="assets/eco-friendly-products-vector-20807673.jpg"
+            />
+          </figure>
+          <div class="card-header">
+            <a href="details.html">Syltherine</a>
             <p>Stylish cafe chair</p>
             <a>Rp 2.500.000</a>
           </div>
